added certificate validation (still untested)

--- a/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.html
+++ b/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.html
@@ -7,19 +7,31 @@
       <img src="assets/images/cards/card1.jpg">
 
       <div class="p-16">
-        <div class="h1">Update available</div>
+        <div class="h1">
+          Update available
+          <a href="{{updateInfo.releaseUrl}}"
+             target="_blank"
+             class="h5 secondary-text"
+             matTooltip="Click here to see what has changed">
+            <mat-icon>help_outline</mat-icon>
+          </a>
+        </div>
         <div class="h4 secondary-text">Current Version: {{updateInfo.currentVersion}} </div>
         <div class="h4 secondary-text">New Version: {{updateInfo.newVersion}} </div>
-        <p>
-          <a href="{{updateInfo.releaseUrl}}" class="h4 secondary-text">What's new?</a>
-        </p>
       </div>
 
-      <div class="p-16 pt-0 line-height-1.75">
-        Cards provide context and an entry point to more robust information and views, and their
-        content and quantity can vary greatly.
-      </div>
+      <mat-form-field class="p-16">
+        <mat-select placeholder="Choose file for {{platform}} to download">
+          <mat-option *ngFor="let assetUrl of updateInfo.assets" [value]="assetUrl">
+            {{assetUrl}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
 
+      <div mat-dialog-actions>
+        <button mat-button [mat-dialog-close]>{{ 'cancel' | i18n }}</button>
+        <button mat-button [mat-dialog-close] color="accent">{{ 'download' | i18n }}</button>
+      </div>
     </div>
-
   </div>
+</div>
