--- a/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.scss
+++ b/web/angular-wallet/src/app/components/new-version-dialog/new-version-dialog.component.scss
@@ -27,6 +27,33 @@
         flex-direction: row;
         align-items: flex-end;
       }
+
+      &-grid {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .cert{
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+
+          &-info{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+          }
+        }
+
+        mat-icon.cert-valid{
+          cursor: pointer;
+          color: green;
+        }
+        mat-icon.cert-invalid{
+          cursor: pointer;
+          color: darkred;
+        }
+      }
     }
 
     mat-form-field {
@@ -38,6 +65,13 @@
       flex-direction: row;
       justify-content: space-between;
       padding: 24px;
+    }
+
+    .invisible{
+      display: none;
+      height: 0;
+      width: 0;
+      opacity: 0;
     }
   }
 }
