--- a/web/angular-wallet/src/app/main/send-burst/warn-send-dialog/warn-send-dialog.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/warn-send-dialog/warn-send-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="warn-dialog">
+<div class="warn-dialog p-24">
   <h1 mat-dialog-title>{{ 'unknown_recipients' | i18n }}</h1>
   <div mat-dialog-content>
     <p>{{ 'unknown_recipients_text' | i18n }}</p>
