--- a/web/angular-wallet/src/app/main/accounts/delete-account-dialog/delete-account-dialog.component.html
+++ b/web/angular-wallet/src/app/main/accounts/delete-account-dialog/delete-account-dialog.component.html
@@ -1,11 +1,13 @@
-<h1 mat-dialog-title>Delete Confirmation</h1>
-<div mat-dialog-content>
-  <p>Are you sure you want to delete these accounts?</p>
-  <ul>
-    <li *ngFor="let account of selectedAccounts">{{account.accountRS}}</li>
-  </ul>
-</div>
-<div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" color="warn">Delete</button>
+<div class="p-24">
+  <h1 mat-dialog-title>Delete Confirmation</h1>
+  <div mat-dialog-content>
+    <p>Are you sure you want to delete these accounts?</p>
+    <ul>
+      <li *ngFor="let account of selectedAccounts">{{account.accountRS}}</li>
+    </ul>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-button [mat-dialog-close]>Cancel</button>
+    <button mat-button [mat-dialog-close]="true" color="warn">Delete</button>
+  </div>
 </div>
