--- a/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/web/angular-wallet/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -49,6 +49,9 @@
     <button mat-menu-item [routerLink]="['set-account-info']">
       <span>{{ 'set_account_info' | i18n }}</span>
     </button>
+    <button mat-menu-item [routerLink]="['set-reward-recipient']">
+      <span>{{ 'set_reward_recipient' | i18n }}</span>
+    </button>
   </mat-menu>
 
   <div class="navbar-content">
