--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -19,4 +19,4 @@
   </div>
 </div>
 
-<ng5-slider [(value)]="feeNQT" [options]="options"></ng5-slider>
+<ng5-slider #slider [(value)]="feeNQT" [options]="options"></ng5-slider>
