finger cursor on hover top menu

--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -6,9 +6,9 @@
 
     <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="column" fxLayoutAlign.gt-xs="center start">
       <div fxLayout="row" fxLayoutAlign="start center">
-        <mat-icon class="secondary-text s-18" [routerLink]="['/']">home</mat-icon>
+        <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <span class="secondary-text" [routerLink]="['/accounts']">{{ 'accounts' | i18n }}</span>
+        <a [routerLink]="['/accounts']"><span class="secondary-text">{{ 'accounts' | i18n }}</span></a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <span class="secondary-text">{{ account.accountRS }}</span>
       </div>
