#457 space separator between text and digits in minimum and cheap fees

--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -10,8 +10,10 @@
     </a>
   </div>
   <div class="__fees">
-    {{'minimum_fee' | i18n}}:<em (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) }}</em>
-    {{'cheap_fee' | i18n}}:<em (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
+    {{'minimum_fee' | i18n}}: <em
+    (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) }}</em>
+    {{'cheap_fee' | i18n}}: <em
+    (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
     {{'standard_fee' | i18n}}: <em
     (click)="feeNQT=convertFeeToBurst(fees.standard)">{{ convertFeeToBurst(fees.standard) }}</em>
     {{'priority_fee' | i18n}}: <em
