underline on hover, del span on some pages

--- a/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
+++ b/web/angular-wallet/src/app/main/blocks/block-details/block-details.component.html
@@ -8,7 +8,7 @@
       <div fxLayout="row" fxLayoutAlign="start center">
         <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <a [routerLink]="['/blocks']"><span class="secondary-text">{{ 'blocks' | i18n }}</span></a>
+        <a [routerLink]="['/blocks']" class="secondary-text">{{ 'blocks' | i18n }}</a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <span class="secondary-text">{{ block.block }}</span>
       </div>
