--- a/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
+++ b/web/angular-wallet/src/app/main/accounts/account-details/account-details.component.html
@@ -8,7 +8,7 @@
       <div fxLayout="row" fxLayoutAlign="start center">
         <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <a [routerLink]="['/accounts']"><span class="secondary-text">{{ 'accounts' | i18n }}</span></a>
+        <a [routerLink]="['/accounts']" class="secondary-text">{{ 'accounts' | i18n }}</a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <span class="secondary-text">{{ account.accountRS }}</span>
       </div>
