--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-details.component.html
@@ -8,7 +8,7 @@
       <div fxLayout="row" fxLayoutAlign="start center">
         <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <a [routerLink]="['/transactions']"><span class="secondary-text">{{ 'transactions' | i18n }}</span></a>
+        <a [routerLink]="['/transactions']" class="secondary-text">{{ 'transactions' | i18n }}</a>
         <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
         <span class="secondary-text">{{ transaction.transaction }}</span>
       </div>
