#404 del link on not existed page detail

--- a/web/angular-wallet/src/app/main/peers/peers.component.html
+++ b/web/angular-wallet/src/app/main/peers/peers.component.html
@@ -20,7 +20,7 @@
           <ng-container matColumnDef="announcedAddress">
               <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'address' | i18n }}</mat-header-cell>
               <mat-cell *matCellDef="let peer">
-                  <span class="link" [routerLink]="['/peer', peer.announcedAddress]">{{ peer.announcedAddress }}</span>
+                  {{ peer.announcedAddress }}
               </mat-cell>
           </ng-container>
 
