fixes #217 auto scale added

--- a/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/balance-diagram/balance-diagram.component.html
@@ -10,7 +10,9 @@
                            [scheme]="options.colorScheme"
                            [gradient]="options.gradient"
                            [curve]="options.curve"
+                           [autoScale]="true"
                            (select)="onSelect($event)"
+
 
     >
       <ng-template #tooltipTemplate let-model="model">
