--- a/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/seed/seed.component.html
@@ -1,10 +1,10 @@
 <div class="seed">
     <h2 class="seed__title">
-        Generate Passphrase
+      {{'generate_passphrase' | i18n}}
     </h2>
     <div class="pin-container">
         <div class="seed__area" (mousemove)="movement($event)" (touchmove)="movement($event)"></div>
         <mat-progress-bar mode="determinate" [value]="this.progress"></mat-progress-bar>
-        <small class="seed__legend">Move your mouse across the area to create a random seed for the password generation.</small>
+        <small class="seed__legend">{{'seed_password_generator' | i18n}}</small>
     </div>
 </div>
