remove icon on 2nd step for small device

--- a/web/angular-wallet/src/app/setup/account/create-active/record/record.component.html
+++ b/web/angular-wallet/src/app/setup/account/create-active/record/record.component.html
@@ -2,7 +2,7 @@
   {{"account_created" |i18n }}
 </h2>
 <div class="passphrase-hint amber-600-bg">
-  <div class="hint">
+  <div class="hint" fxHide fxShow.gt-sm>
     <mat-icon>notification_important</mat-icon>
   </div>
   <div class="hint-help-text">
