--- a/web/angular-wallet/src/app/main/request-burst/request-burst-qr/request-burst-qr.component.scss
+++ b/web/angular-wallet/src/app/main/request-burst/request-burst-qr/request-burst-qr.component.scss
@@ -1,5 +1,14 @@
-li {
-    list-style:none;
-    margin:0;
-    padding:0;
+:host {
+
+  .request-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  ul, li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
 }
