--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -1,30 +1,10 @@
-<div class="page-layout blank simple" fusePerfectScrollbar *ngIf="fees">
-
-
-  <div class="header accent p-24 h-160" fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="row"
-       fxLayoutAlign.gt-xs="space-between center">
-
-    <div fxLayout="column" fxLayoutAlign="center center" fxLayout.gt-xs="column" fxLayoutAlign.gt-xs="center start">
-      <div fxLayout="row" fxLayoutAlign="start center">
-        <a [routerLink]="['/dashboard']"><mat-icon class="secondary-text s-18">home</mat-icon></a>
-        <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
-        <span class="secondary-text">{{ 'send_burst' | i18n }}</span>
-      </div>
-      <div class="h1 mt-16">{{ 'send_burst' | i18n }}</div>
-    </div>
-  </div>
-
-  <!-- CENTER -->
-  <div class="content-container">
-    <div class="p-24 content">
-      <mat-tab-group>
-        <mat-tab label="{{ 'ordinary_payment' | i18n }}">
-          <app-send-burst-form [fees]="fees" [account]="account"></app-send-burst-form>
-        </mat-tab>
-        <mat-tab label="Multi-Out">
-          <app-send-multi-out-form [fees]="fees" [account]="account"></app-send-multi-out-form>
-        </mat-tab>
-      </mat-tab-group>
-    </div>
-  </div>
-</div>
+<app-page title="{{ 'send_burst' | i18n }}" *ngIf="fees">
+  <mat-tab-group>
+    <mat-tab label="{{ 'ordinary_payment' | i18n }}">
+      <app-send-burst-form [fees]="fees" [account]="account"></app-send-burst-form>
+    </mat-tab>
+    <mat-tab label="Multi-Out">
+      <app-send-multi-out-form [fees]="fees" [account]="account"></app-send-multi-out-form>
+    </mat-tab>
+  </mat-tab-group>
+</app-page>
