fixing tests and apply neat box-shadow for page content

--- a/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
+++ b/web/angular-wallet/src/app/main/aliases/add-alias/add-alias.component.html
@@ -1,6 +1,7 @@
 <app-page
   title="{{ 'register_alias' | i18n }}"
   [breadcrumbs]="[{label:'aliases' | i18n, path: '/aliases'}]"
+  *ngIf="fees"
 >
 
   <form (ngSubmit)="onSubmit($event);" #setAliasForm="ngForm">
