--- a/web/angular-wallet/src/app/components/page/page.component.scss
+++ b/web/angular-wallet/src/app/components/page/page.component.scss
@@ -14,7 +14,8 @@
       border-radius: 8px;
       height: fit-content;
       width: 100%;
-      margin-top: 2em;
+      margin: 2em 0;
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
     }
   }
 }
