--- a/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-fee-selector/burst-fee-selector.component.html
@@ -10,14 +10,14 @@
     </a>
   </div>
   <div class="__fees">
-    {{'minimum_fee' | i18n}}: <em
-    (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) }}</em>
-    {{'cheap_fee' | i18n}}: <em
-    (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
-    {{'standard_fee' | i18n}}: <em
-    (click)="feeNQT=convertFeeToBurst(fees.standard)">{{ convertFeeToBurst(fees.standard) }}</em>
-    {{'priority_fee' | i18n}}: <em
-    (click)="feeNQT=convertFeeToBurst(fees.priority)">{{ convertFeeToBurst(fees.priority) }}</em>
+    {{'minimum_fee' | i18n}}:&nbsp;
+    <em (click)="feeNQT=convertFeeToBurst(fees.minimum)">{{ convertFeeToBurst(fees.minimum) }}</em>
+    {{'cheap_fee' | i18n}}:&nbsp;
+    <em (click)="feeNQT=convertFeeToBurst(fees.cheap)">{{ convertFeeToBurst(fees.cheap) }}</em>
+    {{'standard_fee' | i18n}}:&nbsp;
+    <em (click)="feeNQT=convertFeeToBurst(fees.standard)">{{ convertFeeToBurst(fees.standard) }}</em>
+    {{'priority_fee' | i18n}}:&nbsp;
+    <em (click)="feeNQT=convertFeeToBurst(fees.priority)">{{ convertFeeToBurst(fees.priority) }}</em>
   </div>
 </div>
 
